Text updated on index page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="img"></div>
 				<div class="heading">
 					<h2>Learn something new everyday</h2>
-					<p>Remember, a Jedi can feel the Force flowing through him.</p>
+          <p>The world is full of obvious things which nobody by any chance ever observes ~ SH</p>
 					<a href="#">Start here</a>
 				</div>
 			</div>
@@ -40,9 +40,9 @@
 		<section class="events flex-row">
 			<article class="article1">
 				<div class="img"></div>
-				<h3>It doesn't hurt to keep practicing</h3>
-				<p>"Train yourself to let go of everything you fear to lose. Fear is the path to the dark side. Fear leads to anger. Anger leads to hate. Always pass on what you have learned"</p>
-				<p>Yoda, Legendary Jedi Master</p>
+				<h3>There is nothing like first-hand evidence.</h3>
+        <p>It is a capital mistake to theorize before one has data. Insensibly one begins to twist facts to suit theories, instead of theories to suit facts.</p>
+				<p>Holmes, Sherlock Holmes</p>
 			</article>
 			<div class="side-article">
 				<article class="article2 flex-row">
@@ -65,7 +65,7 @@
 					<div class="article-img img-guest"></div>
 					<div class="article-small">
 						<h4>Our guest lecture</h4>
-						<p>Obi-Wan is here. The Force is with him.</p>
+						<p>Dr Watson is here. To share his knowledge on problem solving.</p>
 						<a href="#">Read more</a>
 					</div>
 				</article>
