Finishing touches added to page bottom section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<article class="article1">
 					<video src="./resources/videos/thesis.mp4" autoplay loop controls></video>
 					<h3>Reimagine urban</h3>
-					<p>"Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force. Hokey religions and ancient weapons are no match for a good blaster at your side, kid."</p>
+					<p>I ought to know by this time that when a fact appears to be opposed to a long train of deductions it invariably proves to be capable of bearing some other interpretation. ~ SH</p>
 				</article>
 				<div class="side-article">
 					<article class="article2 flex-row">
